usecase-6/network-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: frontend
spec:
  podSelector: 
    matchLabels: 
      app: webserver
  egress:
  - ports: 
     - port: 3306
       protocol: TCP
